# monodata_repo

./: .gitignore  README.md
.claude/skills/api-parity-review/: SKILL.md
.claude/skills/indigenous-corpus-generator/: SKILL.md
.claude/skills/migration-test-plan/: SKILL.md
api/: .env.example  .gitignore  index.py  pyproject.toml  requirements.txt
api/app/: __init__.py  main.py
api/app/api/: dependencies.py  router.py
api/app/api/routes/: auth.py  contributions.py  conversations.py  health.py  intelligence.py  languages.py  uploads.py  workflow.py
api/app/core/: config.py  database.py  security.py
api/app/models/: __init__.py  base.py  contribution.py  intelligence.py  language.py  user.py  workflow.py
api/app/schemas/: auth.py  contribution.py  conversation.py  intelligence.py  language.py  upload.py  workflow.py
api/app/services/: storage.py
api/migrations/: env.py
api/migrations/versions/: 1430af1c7931_contribution_assets_and_uploads.py  53f49f7cfa15_reviews_rewards_annotations_synthetic_.py  b7472d55d698_contribution_and_translation_workflow.py  c3577a185615_identity_and_language_taxonomy.py  da191d3541f1_conversation_threads_and_turns.py
api/scripts/: seed_local.py
api/tests/: test_auth_and_languages.py
docs/: implementation-plan.md  migration-parity.md  srs.md  vercel-deployment.md  word-prompt-corpus.md
web/: .env.example  .gitignore  next.config.ts  package-lock.json  package.json  tailwind.config.ts
web/prisma/: schema.prisma
web/scripts/: api-smoke.sh  seed-word-prompts.mjs  seed.mjs
web/tests/: auth-login.test.ts
(+98 files in other folders)
