[project]
name = "biidp-api"
version = "0.1.0"
description = "Botswana Indigenous Intelligence Data Platform API"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.34,<1.0",
  "pydantic-settings>=2.8,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.15,<2.0",
  "psycopg[binary]>=3.2,<4.0",
  "boto3>=1.37,<2.0",
  "python-multipart>=0.0.20,<1.0",
  "PyJWT>=2.10,<3.0",
  "pwdlib[argon2]>=0.2,<1.0",
  "email-validator>=2.2,<3.0",
]

[tool.vercel]
entrypoint = "app.main:asgi_app"

[tool.vercel.scripts]
build = "python -m alembic upgrade head"
